# TP_TALLER

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CosasQueHice.md  Makefile  PENDIENTES.md  Pipfile  README.md  archivos_proyecto.txt  cleanup_project.sh  client  collision_test  config.yaml  estructura implementada.txt  install.sh  install_pre_commit.sh  jerarquia de logica a implementar  lobby_client_test  lobby_server_test  movimiento_auto  output.txt  output2.txt  server  taller_editor  taller_tests
Documentacion/: MANUAL_DEL_USUARIO.md  MANUAL_DE_PROYECTO.md
assets/img/map/cities/caminos/: generar_camino.py  (+1 more)
client_src/: CMakeLists.txt  client.cpp  client.h  client_event_handler.cpp  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_resources.qrc  client_sender.cpp  common_types.h  create_match_window.h  garage_window.cpp  lobby_client.cpp  lobby_client.h  lobby_test_client.cpp  lobby_window.cpp  lobby_window.h  main.cpp  waiting_room_window.cpp
client_src/game/: collision_manager.cpp  collision_manager.h  game_renderer.cpp  game_renderer.h
client_src/lobby/: lobby_client.h  lobby_window.h
client_src/lobby/Rankings/: final_ranking.cpp  final_ranking.h
client_src/lobby/controller/: lobby_controller.cpp  lobby_controller.h
client_src/lobby/front/: garage_window.h  lobby_window.cpp  lobby_window.h  main.cpp  match_selection_window.cpp  match_selection_window.h
client_src/lobby/model/: lobby_client.cpp  lobby_client.h
client_src/lobby/view/: base_lobby.cpp  base_lobby.h  client.cpp  client.h  common_types.h  create_match_window.cpp  create_match_window.h  garage_window.cpp  garage_window.h  lobby_window.cpp  lobby_window.h  main.cpp  match_selection_window.cpp  match_selection_window.h  name_input_window.cpp  name_input_window.h  waiting_room_window.cpp  waiting_room_window.h
client_src/ranking/: final_ranking.cpp
common_src/: CMakeLists.txt  collision_manager.cpp  collision_manager.h  config.cpp  config.h  dtos.h  foo.cpp  game_protocol.cpp  game_protocol.h  game_state.cpp  game_state.h  general_paths.h  lobby_protocol.cpp  lobby_protocol.h  map_config.cpp  map_config.h  thread.h  utils.h
config/: configuracion.yaml
docs/: ARQUITECTURA_CLIENTE.md  ESTADO_IMPLEMENTACION.md  GAMESTATE_USAGE.md  RESUMEN_CLIENT_IMPLEMENTATION.md  TODO_LOBBY_INTEGRATION.md
editor/: CMakeLists.txt  main.cpp
scripts/: verify_maps.sh
server_src/: CMakeLists.txt  acceptor.cpp  acceptor.h  main.cpp  server.cpp  server.h  server_acceptor.cpp  server_game.cpp  server_game.h  server_main.cpp  server_monitor.h  server_protocol.cpp  server_protocol.h  server_receiver.h  test_physics_main.cpp
server_src/city_maps/: maps_01_example.yaml  test_track.yaml
server_src/city_maps/Liberty City/: Aeropuerto.yaml  Circuito Centro.yaml  Playa.yaml  ruta1.yaml
server_src/city_maps/Liberty_City/: Aeropuerto.yaml  Centro.yaml  Playa.yaml  mapa-liberty-city.yaml  ruta1.yaml  ruta2.yaml  ruta3.yaml
server_src/city_maps/San Andreas/: Desierto.yaml  Las_Venturas.yaml  Los_Santos.yaml  ruta1.yaml  ruta2.yaml  ruta3.yaml  san-andreas.yaml
server_src/city_maps/Vice City/: Autopista.yaml  Centro.yaml  Playa.yaml  ruta1.yaml  ruta2.yaml  ruta3.yaml  vice-city.yaml
server_src/game/: car.cpp  car.h  checkpoint_manager.cpp  checkpoint_manager.h  checkpoints.h  collision_handler.cpp  collision_handler.h  game_loop.cpp  game_loop.h  map_loader.cpp  map_loader.h  match.cpp  match.h  obstacle.cpp  obstacle.h  obstacle_manager.h  physics_constants.h  player.h  race.cpp  race.h
server_src/lobby/: game_room.cpp  game_room.h  lobby_main.cpp  lobby_manager.cpp  lobby_manager.h  lobby_protocol.h  lobby_server.cpp  lobby_server.h
server_src/network/: client_handler.cpp  client_handler.h  client_monitor.cpp  client_monitor.h  matches_monitor.cpp  matches_monitor.h  monitor.cpp  monitor.h  receiver.cpp  receiver.h  sender.cpp  sender.h
server_src/tests/: movimiento_auto.cpp
sockets-2025c2-PinangoJulio-main/sockets-2025c2-PinangoJulio-main/: README.md
sockets-2025c2-PinangoJulio-main/sockets-2025c2-PinangoJulio-main/casos/01_test_send_username/: __client_descriptors__
sockets-2025c2-PinangoJulio-main/sockets-2025c2-PinangoJulio-main/casos/02_test_buy_car/: __client_descriptors__
sockets-2025c2-PinangoJulio-main/sockets-2025c2-PinangoJulio-main/client_src/: client.cpp  client.h  client_main.cpp
sockets-2025c2-PinangoJulio-main/sockets-2025c2-PinangoJulio-main/server_src/: server.cpp  server.h  server_main.cpp
tests/: CMakeLists.txt  collision_tests.cpp  coordenadas de inicio.txt  foo.cpp  lobby_integration_test.cpp  lobby_tests.cpp  map_loader_tests.cpp  physics_advanced_tests.cpp  physics_tests.cpp  protocol_tests.cpp  test_collision_movimiento.cpp
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/: CMakeLists.txt  README.md  client  server
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/casos/01_single_player_one_nitro_command/: __client_0_valgrind__  __client_descriptors__  __server_valgrind__
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/casos/02_single_player_sends_many_nitro/: __client_0_valgrind__  __client_descriptors__  __server_valgrind__
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/casos/03_three_players_all_use_nitro/: __client_0_valgrind__  __client_1_valgrind__  __client_2_valgrind__  __client_descriptors__  __server_valgrind__  client
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/casos/04_three_players_use_nitro_twice/: __client_0_valgrind__  __client_1_valgrind__  __client_2_valgrind__  __client_descriptors__  __server_valgrind__  server
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/client_src/: client_protocol.cpp
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/common_src/: utils.h
threads-2025c2-loudemeglio/threads-2025c2-loudemeglio/server_src/: server_acceptor.h  server_client_handler.cpp  server_client_handler.h  server_game.h  server_monitor.cpp  server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_sender.cpp  server_sender.h
(+8 files in other folders)
